name:                bigchaindb
version:             0.1.0.0
synopsis:            Common code library for BigchainDB
-- description:      
-- license:             
-- license-file:       
author:              Scott Sadler
maintainer:          scott@bigchaindb.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

Flag so
    Description: Build shared object
    Manual: True
    Default: False

library
  exposed-modules:     BigchainDB.API,
                       BigchainDB.Transaction,
                       BigchainDB.Transaction.Types,
                       BigchainDB.Prelude,
                       BigchainDB.Crypto,
                       BigchainDB.Crypto.B58Keys,
                       BigchainDB.CryptoConditions,
                       BigchainDB.CryptoConditions.DSL,
                       BigchainDB.CryptoConditions.DSL.Parse,
                       BigchainDB.CryptoConditions.DSL.Serialize
  build-depends:       base,
                       aeson,
                       text,
                       bytestring,
                       base58-bytestring,
                       cryptonite,
                       cryptoconditions,
                       microlens,
                       microlens-platform,
                       microlens-aeson,
                       transformers,
                       memory,
                       attoparsec,
                       containers,
                       base64-bytestring,
                       aeson-pretty
  hs-source-dirs:      src
  if flag(so)
    extra-libraries:   HSrts-ghc8.0.1
    exposed-modules:   BigchainDB.FFI
    C-sources:         src/module_init.c
    cpp-options:       -DMODULE=BigchainDB
  default-language:    Haskell2010


executable bigchaindb
  if flag(so)
    buildable:         False
  hs-source-dirs:      src/cli
  main-is:             Main.hs
  Build-depends:       base,
                       bigchaindb,
                       bytestring,
                       optparse-applicative,
                       aeson,
                       aeson-pretty

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  build-depends:       bigchaindb,
                       base,
                       aeson,
                       text,
                       bytestring,
                       cryptonite,
                       microlens,
                       microlens-platform,
                       microlens-aeson,
                       transformers,
                       memory,
                       attoparsec,
                       containers,
                       base64-bytestring,
                       base58-bytestring,
                       tasty,
                       tasty-hunit,
                       tasty-golden,
                       smallcheck,
                       tasty-smallcheck
  default-language:    Haskell2010

executable profile-main
  buildable:           False
  main-is:             Profile.hs
  hs-source-dirs:      tests
  build-depends:       bigchaindb,
                       base,
                       aeson,
                       text,
                       bytestring,
                       base58-bytestring,
                       cryptonite,
                       microlens,
                       microlens-platform,
                       microlens-aeson,
                       transformers,
                       memory,
                       attoparsec,
                       containers,
                       base64-bytestring
  default-language:    Haskell2010

