name:                bigchaindb
version:             0.2.0
synopsis:            Common code library for BigchainDB
license:             Apache-2.0
license-file:        LICENSES.md
author:              Scott Sadler
maintainer:          scott@bigchaindb.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

Flag so
    Description: Build shared object
    Manual: True
    Default: False

library
  exposed-modules:     BigchainDB.API,
                       BigchainDB.API.Http,
                       BigchainDB.API.Tx,
                       BigchainDB.API.Utils,
                       BigchainDB.Crypto,
                       BigchainDB.Crypto.B58Keys,
                       BigchainDB.CryptoConditions,
                       BigchainDB.CryptoConditions.DSL,
                       BigchainDB.CryptoConditions.DSL.Parse,
                       BigchainDB.CryptoConditions.DSL.Serialize,
                       BigchainDB.CryptoConditions.Types,
                       BigchainDB.Data.Aeson,
                       BigchainDB.Data.Utils,
                       BigchainDB.Errors,
                       BigchainDB.Prelude,
                       BigchainDB.Transaction,
                       BigchainDB.Transaction.Common,
                       BigchainDB.Transaction.Types,
                       BigchainDB.Transaction.Transfer
  build-depends:       base,
                       aeson,
                       aeson-quick,
                       text,
                       bytestring,
                       base58-bytestring,
                       cryptonite,
                       cryptoconditions,
                       http-client,
                       http-conduit,
                       unordered-containers,
                       microlens,
                       microlens-platform,
                       microlens-aeson,
                       transformers,
                       memory,
                       attoparsec,
                       containers,
                       base64-bytestring,
                       aeson-pretty
  hs-source-dirs:      src
  if flag(so)
    exposed-modules:   BigchainDB.FFI
    --extra-libraries:   HSrts-ghc8.0.1
    --ghc-options:       lHSrts-ghc8.0.1
    C-sources:         src/module_init.c
    cpp-options:       -DMODULE=BigchainDB
  default-language:    Haskell2010


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  build-depends:       bigchaindb,
                       base,
                       aeson,
                       aeson-quick,
                       text,
                       bytestring,
                       cryptonite,
                       microlens,
                       microlens-platform,
                       microlens-aeson,
                       transformers,
                       memory,
                       attoparsec,
                       containers,
                       base64-bytestring,
                       base58-bytestring,
                       random,
                       tasty,
                       tasty-hunit,
                       tasty-golden,
                       smallcheck,
                       tasty-smallcheck
  default-language:    Haskell2010

executable profile-main
  buildable:           False
  main-is:             Profile.hs
  hs-source-dirs:      tests
  build-depends:       bigchaindb,
                       base,
                       aeson,
                       text,
                       bytestring,
                       base58-bytestring,
                       cryptonite,
                       microlens,
                       microlens-platform,
                       microlens-aeson,
                       transformers,
                       memory,
                       attoparsec,
                       containers,
                       base64-bytestring
  default-language:    Haskell2010

