name:                bigchaindb-js
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/js#readme
license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable js-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       bigchaindb-hs,
                       ghcjs-base,
                       bytestring
  default-language:    Haskell2010
  js-sources:          src/externs.js

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/js
